# enforce-notebook-run-order

./: .buildinfo  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  GITHUB_README.html  GITHUB_README.rst  Makefile  README.html  README.md  README.rst  cli.html  contributing.html  genindex.html  index.html  license  module_enforce_notebook_run_order.html  objects.inv  py-modindex.html  pyproject.toml  python_api.html  search.html  searchindex.js
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: GITHUB_README.doctree  README.doctree  cli.doctree  contributing.doctree  environment.pickle  index.doctree  module_enforce_notebook_run_order.doctree  python_api.doctree
.github/workflows/: auto-tag.yml  docs.yml  publish-pypi.yaml  python-publish.yml  test.yaml
_sources/: README.rst.txt  cli.rst.txt  contributing.rst.txt  index.rst.txt
docs/: GITHUB_README.rst  README.rst  conf.py  index.rst  module_enforce_notebook_run_order.rst  python_api.rst
docs/_build/: .buildinfo  README.html  index.html  module_enforce_notebook_run_order.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/.doctrees/: README.doctree  environment.pickle  index.doctree  module_enforce_notebook_run_order.doctree
docs/_build/doctrees/: README.doctree  environment.pickle  index.doctree
docs/_build/html/: genindex.html  index.html  searchindex.js
docs/_static/: custom.css
enforce_notebook_run_order/: __init__.py  cli.py  enforce_notebook_run_order.py  utils.py
src/: enforce_notebook_run_order.py  temp_notebook.py  utils.py
src/add_hook/: __init__.py  add_hook.py
src/enforce_notebook_run_order/: __init__.py  cli.py  enforce_notebook_run_order.py  temp_notebook.py  utils.py
src/hook_manager/: __init__.py  add_hook.py  common.py  remove_hook.py
test/: conftest.py  test_add_hook.py  test_cli.py  test_enforce_notebook_run_order.py  test_hook_manager.py  test_multi_language_notebooks.py  test_temp_notebook.py  test_utils.py
test/test_data/: invalid_notebook.ipynb  valid_notebook.ipynb
test/test_data/r_notebooks/: valid_r_notebook.ipynb
test/test_data/temp_notebook_uses_external_data/: temp_notebook_uses_external_data.ipynb  temp_notebook_uses_external_data_directory.ipynb
test/test_enforce_notebook_run_order/: test_enforce_notebook_run_order.py
test/test_hook_manager/: test_add_hook.py  test_common.py  test_hook_manager.py  test_remove_hook.py  utils.py
(+9 files in other folders)
