[tool.poetry]
name = "enforce-notebook-run-order"
version = "2.0.0"
description = "Don't let notebook cells run out of order"
authors = ["Chris Hacker <c.m.hacker1997@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
click = "^8.1.7"
pre-commit = "^3.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pylint = "^3.2.6"
pytest = "^8.3.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
Sphinx = "^7.4.7"
sphinx-click = "^6.0.0"
recommonmark = "^0.7.1"
pydata-sphinx-theme = "^0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
